Add pagination to the get all articles endpoint